fix jumping margins on filter hover (#142)

--- a/sitemedia/scss/base/page/_filter.scss
+++ b/sitemedia/scss/base/page/_filter.scss
@@ -296,7 +296,7 @@
 
   &:hover {
     overflow-y: scroll;
-    margin-right: -1em;
+    // margin-right: -1em;
   }
 
   .mdl-checkbox {
